# practice_rag

./: .gitignore  CLAUDE.md  README.md  download_edgar.py  embedder.py  pdf_handler.py  prompt.py  pyproject.toml  rag.py  utils.py  vector_db_handlers.py
data/: kalmar_vs_guy.txt
edgar_data/filings/: ALLIS_CHALMERS_ENERGY_INC_2006_03_0000950129-06-002926.txt  ALLIS_CHALMERS_ENERGY_INC_2006_05_0000950129-06-004690.txt  ALLIS_CHALMERS_ENERGY_INC_2006_05_0000950129-06-005244.txt  ALLIS_CHALMERS_ENERGY_INC_2006_07_0000950129-06-007243.txt  ALLIS_CHALMERS_ENERGY_INC_2006_07_0000950129-06-007244.txt  ALLIS_CHALMERS_ENERGY_INC_2006_08_0000950129-06-007871.txt  ALLIS_CHALMERS_ENERGY_INC_2006_11_0000950129-06-009522.txt  ALLIS_CHALMERS_ENERGY_INC_2006_12_0000950134-06-023819.txt  ALLIS_CHALMERS_ENERGY_INC_2007_03_0000950129-07-001381.txt  ALLIS_CHALMERS_ENERGY_INC_2007_05_0000950129-07-002432.txt  ALLIS_CHALMERS_ENERGY_INC_2007_08_0000950129-07-003918.txt  ALLIS_CHALMERS_ENERGY_INC_2007_11_0000950129-07-005361.txt  ALLIS_CHALMERS_ENERGY_INC_2008_03_0000950129-08-001569.txt  ALLIS_CHALMERS_ENERGY_INC_2008_04_0000950129-08-002507.txt  AMERADA_HESS_CORP_2003_11_0000950123-03-012528.txt  AMERADA_HESS_CORP_2004_03_0000950123-04-003322.txt  AMERADA_HESS_CORP_2004_05_0000950123-04-005950.txt  (+30 more)
handlers/: embedder.py  vector_db_handlers.py
plans/: deterministic_parser_plan.md
scripts/: call_model.py  cch_rag.py  download_edgar.py  simple_rag.py  summary_and_sections_batch_collect.py  summary_and_sections_batch_submit.py  summary_and_sections_rag.py
(+4 files in other folders)
