[project]
name = "practice-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Yizhar Goldstein",email = "izhargo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pypdf>=4.0.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub[cli]>=0.23.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
