[project]
name = "practice-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Yizhar Goldstein",email = "izhargo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "langchain-text-splitters>=0.3.0",
    "lxml (>=6.1.0,<7.0.0)",
    "numpy>=1.26.0",
    "openai (>=2.36.0,<3.0.0)",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
